--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
     // --- MAPOWANIE PÓL HTML DO KOMÓREK W ARKUSZU GOOGLE ---
     const cellMappings = {
-        'displayDupaField': { row: 45, col: 'E' },
+        'displayDupaField': { row: 9, col: 'C' },
 
         'oeeShift1': { row: 2, col: 'D' },
         'oeeShift2': { row: 2, col: 'E' },
