--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 </head>
 <body>
     <div class="container">
-        <img class="header-image" src="https://via.placeholder.com/1200x100.png?text=Nagłówek+Pulpitu+OEE" alt="Nagłówek Pulpitu OEE">
+        <img class="header-image" src="https://via.placeholder.com/1200x100.png?text=Nagłówek+Pulpitu+OEE" alt="________Nagłówek Pulpitu OEE">
 
         <div class="top-bar">
             <div class="top-bar-item" id="displayDupaField">
@@ -368,7 +368,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
     // --- MAPOWANIE PÓL HTML DO KOMÓREK W ARKUSZU GOOGLE ---
     const cellMappings = {
-        'displayDupaField': { row: 43, col: 'E' },
+        'displayDupaField': { row: 24, col: 'A' },
 
         'oeeShift1': { row: 2, col: 'D' },
         'oeeShift2': { row: 2, col: 'E' },
